plugins {
  id "base"
  id "idea"
  id "org.flywaydb.flyway" version "10.11.0" apply false
  id "com.google.cloud.tools.jib" version "3.1.4" apply false
  id "org.springframework.boot" version "4.1.0" apply false
  id "io.spring.dependency-management" version "1.1.7" apply false
  id "com.google.protobuf" version "0.10.0" apply false
  id "org.springdoc.openapi-gradle-plugin" version "1.9.0" apply false
}

import groovy.json.JsonOutput
import groovy.json.JsonSlurper

ext {
  micrometerVersion = "1.16.2"
  testcontainersVersion = "2.0.2"
  springBootDependenciesVersion = "4.1.0"
  resilience4jVersion = "2.2.0"
  springdocVersion = "2.8.9"
}

subprojects {
  group "com.metao.book"
  apply plugin: "java"
  apply plugin: "com.google.protobuf"
  apply plugin: "jacoco"
  apply plugin: "io.spring.dependency-management"

  repositories {
    mavenLocal()
    mavenCentral()
    maven { url "https://packages.confluent.io/maven/" }
  }
  List<String> springBootProjects = (gradle.ext.has('springBootProjects') ? gradle.springBootProjects : []) as List<String>
  boolean isSpringProject = springBootProjects.contains(it.path)
  if (isSpringProject) {
    apply plugin: "org.springframework.boot"
    apply plugin: "io.spring.dependency-management"
    apply plugin: "org.flywaydb.flyway"
    dependencies {
      implementation("org.springframework.boot:spring-boot-starter-web") {
        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
      }
      implementation "org.springframework.boot:spring-boot-autoconfigure"
      implementation "org.springframework.boot:spring-boot-kafka"
      implementation "commons-codec:commons-codec:1.17.1"
      implementation "io.github.resilience4j:resilience4j-spring-boot3:${resilience4jVersion}"
      implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"

      testImplementation "org.springframework.boot:spring-boot-starter-test"
    }
    dependencyManagement {
      imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootDependenciesVersion}"
      }
    }

    bootJar {
      exclude("data/**")
    }
  }

  dependencies {

    // Test
    testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
    testImplementation "org.assertj:assertj-core:3.27.7"
    testImplementation "org.awaitility:awaitility:4.3.0"
    testImplementation "org.mockito:mockito-core:4.8.0"
    testImplementation "com.tngtech.archunit:archunit-junit5:1.4.1"

    // Lombok
    implementation "org.projectlombok:lombok:1.18.36"
    annotationProcessor "org.projectlombok:lombok:1.18.36"
    testAnnotationProcessor "org.projectlombok:lombok:1.18.36"

    testImplementation "org.testcontainers:testcontainers-junit-jupiter:${testcontainersVersion}"
    testImplementation "org.testcontainers:testcontainers-postgresql:${testcontainersVersion}"
    testImplementation "org.testcontainers:testcontainers:${testcontainersVersion}"
    testImplementation platform("org.testcontainers:testcontainers-bom:${testcontainersVersion}")

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  }

  configurations.configureEach {
    test {
      useJUnitPlatform()
      jvmArgs "-XX:+EnableDynamicAgentLoading"
      environment "TESTCONTAINERS_DOCKER_SOCKET_OVERRIDE", "/var/run/docker.sock"
      doFirst {
        systemProperty "spring.profiles.active", "test"
      }

      testLogging {
        events "PASSED", "SKIPPED", "FAILED"
      }
    }

    exclude group: "org.junit.vintage", module: "junit-vintage-engine"
    exclude group: "org.slf4j", module: "slf4j-simple"
    exclude group: "org.slf4j", module: "slf4j-log4j12"
    exclude group: "org.junit.vintage:junit-vintage-engine"
    dependencyManagement {
      imports {
        mavenBom "io.micrometer:micrometer-bom:${micrometerVersion}"
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
        mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootDependenciesVersion}"
      }
    }
  }

  java {
    toolchain {
      languageVersion = JavaLanguageVersion.of(25)
    }
  }

  jacocoTestReport {
    dependsOn test
    reports {
      xml.required = true
      html.required = true
    }
  }

  // Gradle configuration cache currently doesn't support Maven publishing tasks in this build.
  plugins.withId('maven-publish') {
    tasks.withType(org.gradle.api.publish.maven.tasks.GenerateMavenPom).configureEach {
      notCompatibleWithConfigurationCache("maven-publish POM generation is not configuration-cache compatible in this build")
    }
    tasks.withType(org.gradle.api.publish.maven.tasks.PublishToMavenLocal).configureEach {
      notCompatibleWithConfigurationCache("maven-publish is not configuration-cache compatible in this build")
    }
    tasks.withType(org.gradle.api.publish.maven.tasks.PublishToMavenRepository).configureEach {
      notCompatibleWithConfigurationCache("maven-publish is not configuration-cache compatible in this build")
    }
  }
}

tasks.register('buildDependencies') {
  [':shared-kernel', ':kafka-lib', ':shared-test',
   ':inventory-microservice', ':payment-microservice', ':order-microservice'].each { modulePath ->
    if (findProject(modulePath) != null) {
      dependsOn "${modulePath}:build"
    }
  }
}

tasks.register('publishLocalDependencies') {
  [':shared-kernel', ':kafka-lib', ':shared-test'].each { modulePath ->
    if (findProject(modulePath) != null) {
      dependsOn "${modulePath}:publishToMavenLocal"
    }
  }
}

tasks.named('build') {
  dependsOn ':buildDependencies'
  if (providers.gradleProperty('includeOpenApiDocsInBuild').map { it.toBoolean() }.orElse(false).get()) {
    dependsOn ':generateOpenApiDocs'
  }
}

def openApiTargets = [
  [name: 'inventory', url: 'http://localhost:8083/v3/api-docs', file: 'inventory-openapi.json'],
  [name: 'order', url: 'http://localhost:8086/v3/api-docs', file: 'order-openapi.json'],
  [name: 'payment', url: 'http://localhost:8084/v3/api-docs', file: 'payment-openapi.json']
]

tasks.register('generateOpenApiDocs') {
  group = 'documentation'
  description = 'Fetches OpenAPI JSON from running services into docs/api'

  def docsDir = layout.projectDirectory.dir("docs/api")
  outputs.dir(docsDir)
  def strictOpenApiDocs = providers.gradleProperty('strictOpenApiDocs').map { it.toBoolean() }.orElse(false).get()

  doLast {
    def outputDir = docsDir.get().asFile
    outputDir.mkdirs()
    openApiTargets.each { target ->
      try {
        def connection = new URL(target.url).openConnection()
        connection.connectTimeout = 10000
        connection.readTimeout = 30000
        def body = connection.inputStream.getText('UTF-8')
        def parsed = new JsonSlurper().parseText(body)
        def outFile = new File(outputDir, target.file)
        outFile.text = JsonOutput.prettyPrint(JsonOutput.toJson(parsed)) + "\n"
        logger.lifecycle("Generated OpenAPI spec for ${target.name}: ${outFile}")
      } catch (Exception ex) {
        if (strictOpenApiDocs) {
          throw new GradleException("Failed to fetch OpenAPI spec from ${target.url}", ex)
        }
        logger.warn("Skipping OpenAPI spec for ${target.name} (${target.url}): ${ex.message}")
      }
    }
  }
}

subprojects {
  tasks.matching { it.name == 'generateOpenApiDocs' }.configureEach {
    enabled = false
  }
}
